fixed popup visibility

--- a/src/sass/components/popup.sass
+++ b/src/sass/components/popup.sass
@@ -3,6 +3,7 @@
   left: 0
   top: 0
   z-index: 30
+  display: none
   width: 100%
   height: 100%
   visibility: hidden
@@ -59,6 +60,9 @@
     max-height: none
     transform: translate(0, 0)
     border-radius: 0
+
+  &--loaded
+    display: block
 
   &--show
     opacity: 1
